# smartesting-python-public

./: .gitignore  .gitmodules  .pylintrc  README.adoc  pyproject.toml  setup.cfg
00-app/: README.adoc
00-app/00-bik-service/: README.adoc
00-app/00-fraud-detection/: .gitignore  README.adoc
01-introduction-to-testing/01-01-unit-tests/: README.adoc
02-unit-testing/: README.adoc
03-integration-testing/03-02-ioc/: README.adoc
03-integration-testing/03-03-controller/: README.adoc
03-integration-testing/03-04-client/: README.adoc
03-integration-testing/03-05-db/: README.adoc
03-integration-testing/03-06-messaging/: README.adoc
03-integration-testing/03-07-dev/: README.adoc
03-integration-testing/03-07-dev/03-07-01-in-mem/: Dockerfile  README.adoc  pyproject.toml
03-integration-testing/03-07-dev/03-07-01-in-mem/smarttesting/: dev_modules.py  serialization.py  smart_testing_application.py  web_app.py
03-integration-testing/03-07-dev/03-07-01-in-mem/smarttesting/customer/: person.py
03-integration-testing/03-07-dev/03-07-01-in-mem/smarttesting/verifier/customer/: bik_verification_service.py  customer_verifier.py  module.py  task.py
03-integration-testing/03-07-dev/03-07-01-in-mem/smarttesting/verifier/customer/verification/: module.py
04-end-to-end-testing/04-01-rest-based-e2e/: README.adoc
05-architecture/: README.adoc
05-architecture/05-02-packages/: README.adoc
06-automation/: README.adoc
07-going-to-production/: Dockerfile  README.adoc  docker-compose.yml  loanOrder.json  prometheus.yml  pyproject.toml
09-tests-and-design/: README.adoc
(+429 files in other folders)
